--- a/app/views/daily-checks/print-cheques.html
+++ b/app/views/daily-checks/print-cheques.html
@@ -29,7 +29,7 @@
             title: "",
             showTitleAsHeading: false,
             dismissible: false,
-            html: '7 cheques printed'
+            html: 'Success message.'
         }) }}
 
         {% else %}
