--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -7,8 +7,23 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 
 {% block header %}
 
+<div class="govuk-!-padding-top-3 prototype-banner govuk-!-padding-bottom-3" style="background-color: #ffdd00; width: 100%; position: fixed; top: 0; right: 0; z-index: 1000;" >
+  <div class="govuk-width-container">
+   
+   <p class="govuk-body govuk-!-margin-bottom-0">
+    <strong class="govuk-tag govuk-!-margin-right-1" style="background-color: #000; color: white;">
+      Prototype
+    </strong>
+     For research purposes only.
+    </p>
+  </div>
+</div>
+
 {{ mojHeader({
     navigationClasses: 'govuk-width-container',
+    attributes: {
+      style: "margin-top: 55px;"
+    },
     organisationLabel: {
       text: 'HMCTS',
       href: '../index.html'
@@ -80,6 +95,14 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 </script>
 
 {% endblock %}
+
+<style>
+  @media (max-width: 640px) {
+  .prototype-banner {
+    margin-top: 50px !important;
+  }
+}
+</style>
 
 {% block scripts %}
   {{ super() }}
