--- a/app/views/daily-checks/print-report.html
+++ b/app/views/daily-checks/print-report.html
@@ -29,7 +29,7 @@
             title: "",
             showTitleAsHeading: false,
             dismissible: false,
-            html: '7 cheques printed'
+            html: 'Success message.'
         }) }}
 
         {% else %}
@@ -84,7 +84,7 @@
                     <td class="govuk-table__cell">7</td>
                     <td class="govuk-table__cell">Cheques printed</td>
                     <td class="govuk-table__cell">{{data['businessUnit']}}</td>
-                    <td class="govuk-table__cell download"><a class="govuk-link govuk-link--no-visited-state"  href="/public/files/unpresented-cheques-opal-research-report.csv" download>Download</a></td>
+                    <td class="govuk-table__cell download"><a class="govuk-link govuk-link--no-visited-state"  href="#">Download</a></td>
                 </tr>
                 </tbody>
             </table>
