--- a/app/views/daily-checks/suspense.html
+++ b/app/views/daily-checks/suspense.html
@@ -43,60 +43,78 @@
                     classes: "govuk-button--secondary",
                     href: "./bank-list.html?presentedCheques=ready"
                 }) }} -->
+                
+                {% if (data['suspenseCreated'] == "true" and data['suspense2Created'] == "true") %}
+                {{ govukButton({
+                    text: "Create report",
+                    classes: "",
+                    href: "#"
+                }) }}
+                {% elseif data['suspenseCreated'] == "true"  %}
+                {{ govukButton({
+                    text: "Create report",
+                    classes: "",
+                    href: "./create-suspense-report-2.html"
+                }) }}
+                {% else %}
                 {{ govukButton({
                     text: "Create report",
                     classes: "",
                     href: "./create-suspense-report.html"
                 }) }}
+                {% endif %}
 
                 
             </div>
 
             <!-- TABLE -->
 
-            {% if data['suspenseReport'] == "ready" %}
-            <h2 class="govuk-heading-m">Today</h2>
+            <!-- if suspense1created
+                show refresh
+                    if suspense1 = in progress 
+                    show in progress
+                    if suspesne1 = ready 
+                    show ready
 
-            {{ govukButton({
-                    text: "Refresh",
-                    classes: "govuk-button--secondary govuk-!-margin-bottom-4",
-                    href: "./suspense.html?suspenseReport=ready"
+                    if suspense2 = in progress 
+                    show in progress
+                    if suspesne2 = ready 
+                    show ready
+
+                show table 
+                    if suspense1 = in progress 
+                    show in progress
+                    if suspesne1 = ready 
+                    show ready
+
+                    if suspense2 = in progress 
+                    show in progress
+                    if suspesne2 = ready 
+                    show ready
+            else 
+                show nothing
+            end -->
+
+            {% if data['suspenseCreated'] == "true" %}
+                <h2 class="govuk-heading-m">Today</h2>
+
+
+                {% if data['suspenseReport'] == "in-progress" %}
+                {{ govukButton({
+                        text: "Refresh",
+                        classes: "govuk-button--secondary govuk-!-margin-bottom-4",
+                        href: "./suspense.html?suspenseReport=ready&suspenseReport2=ready"
                 }) }}
-
-            <div class="moj-scrollable-pane">
-            <table class="govuk-table" data-module="moj-sortable-table">
-                <thead class="govuk-table__head">
-                <tr class="govuk-table__row">
-                    <th class="govuk-table__header" scope="col" aria-sort="none" style="width: 20%;">Date and time</th>
-                    <th class="govuk-table__header" scope="col" aria-sort="none">Title</th>
-                    <th class="govuk-table__header" scope="col" aria-sort="none">Business unit</th>
-                    <th class="govuk-table__header" scope="col" aria-sort="none">Created by</th>
-                    <th class="govuk-table__header" scope="col" aria-sort="none">Status</th>
-                    <th class="govuk-table__header empty" scope="col" aria-sort="none"></th>
-                </tr>
-                </thead>
-                <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
-                    <td class="govuk-table__cell">Suspense report</td>
-                    <td class="govuk-table__cell">{{data['businessUnit']}}</td>
-                    <td class="govuk-table__cell">jane.smith</td>
-                    <td class="govuk-table__cell">Ready</td>
-                    <td class="govuk-table__cell download"><a class="govuk-link govuk-link--no-visited-state"  href="#" download>Download</a></td>
-                </tr>
-                </tbody>
-            </table>
-            </div>
-            {% elseif data['suspenseReport'] == "in-progress" %}
-            <h2 class="govuk-heading-m">Today</h2>
-
-            {{ govukButton({
-                    text: "Refresh",
-                    classes: "govuk-button--secondary govuk-!-margin-bottom-4",
-                    href: "./suspense.html?suspenseReport=ready"
+                {% elseif data['suspenseReport'] == "ready" %}
+                {{ govukButton({
+                        text: "Refresh",
+                        classes: "govuk-button--secondary govuk-!-margin-bottom-4",
+                        href: "./suspense.html?suspenseReport=ready&suspenseReport2=ready"
                 }) }}
+                {% endif %}
 
-            <div class="moj-scrollable-pane">
+
+                <div class="moj-scrollable-pane">
                 <table class="govuk-table" data-module="moj-sortable-table">
                     <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
@@ -105,30 +123,63 @@
                         <th class="govuk-table__header" scope="col" aria-sort="none">Business unit</th>
                         <th class="govuk-table__header" scope="col" aria-sort="none">Created by</th>
                         <th class="govuk-table__header" scope="col" aria-sort="none">Status</th>
+                        <th class="govuk-table__header empty" scope="col" aria-sort="none"></th>
                     </tr>
                     </thead>
                     <tbody class="govuk-table__body">
+                    {% if data['suspenseReport'] == "in-progress" %}
+                    <tr class="govuk-table__row">
+                            <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                            <td class="govuk-table__cell">Suspense report – {{data['suspenseCategory']}}</td>
+                            <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                            <td class="govuk-table__cell">jane.smith</td>
+                            <td class="govuk-table__cell">In progress</td>
+                            <td class="govuk-table__cell"></td>
+                        </tr>
+                    {% endif %}
+                    {% if data['suspenseReport'] == "ready" %}
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
-                        <td class="govuk-table__cell">Suspense report</td>
+                        <td class="govuk-table__cell">Suspense report – {{data['suspenseCategory']}}</td>
                         <td class="govuk-table__cell">{{data['businessUnit']}}</td>
                         <td class="govuk-table__cell">jane.smith</td>
-                        <td class="govuk-table__cell">In progress</td>
+                        <td class="govuk-table__cell">Ready</td>
+                        <td class="govuk-table__cell download"><a class="govuk-link govuk-link--no-visited-state"  href="#" download>Download</a></td>
                     </tr>
+                    {% endif %}
+                    {% if (data['suspenseCreated2'] == "true" and data['suspenseReport2'] == "in-progress") %}
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                            <td class="govuk-table__cell">Suspense report – {{data['suspense2Category']}}</td>
+                            <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                            <td class="govuk-table__cell">jane.smith</td>
+                            <td class="govuk-table__cell">In progress</td>
+                            <td class="govuk-table__cell"></td>
+                        </tr>
+                    {% endif %}
+                    {% if (data['suspenseCreated2'] == "true" and data['suspenseReport2'] == "ready") %}
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                            <td class="govuk-table__cell">Suspense report – {{data['suspense2Category']}}</td>
+                            <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                            <td class="govuk-table__cell">jane.smith</td>
+                            <td class="govuk-table__cell">Ready</td>
+                            <td class="govuk-table__cell download"><a class="govuk-link govuk-link--no-visited-state"  href="#" download>Download</a></td>
+                        </tr>
+                    {% endif %}
                     </tbody>
+
                 </table>
-            </div>
+                </div>
+            
+
             {% else %}
             <h2 class="govuk-heading-m">Today</h2>
             
 
             <p class="govuk-body">No suspense reports have been created.</p>
 
-            <!-- {{ govukButton({
-                    text: "Refresh",
-                    classes: "govuk-button--secondary ",
-                    href: "#"
-                }) }} -->
+    
             {% endif %}
 
 
