print cheques and bacs file

--- a/app/views/finance.html
+++ b/app/views/finance.html
@@ -8,12 +8,6 @@
     <div class="govuk-grid-column-one-half">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <p class="govuk-body">
-       <a class="govuk-link--no-visited-state" href="./daily-checks/select-business-unit.html">
-        Daily checks
-       </a> 
-      </p>
-
       <h2 class="govuk-heading-m">Cash</h2>
 
       <p class="govuk-body">
@@ -26,6 +20,20 @@
        <a class="govuk-link--no-visited-state" href="#">
         Automatic cash input
        </a>
+      </p>
+
+      <h2 class="govuk-heading-m">Checks</h2>
+
+      <p class="govuk-body">
+       <a class="govuk-link--no-visited-state" href="./daily-checks/select-business-unit.html">
+        Daily checks
+       </a> 
+      </p>
+
+      <p class="govuk-body">
+       <a class="govuk-link--no-visited-state" href="./month-end/select-business-unit.html">
+        Month end
+       </a> 
       </p>
       
     </div>
