--- a/app/views/index.html
+++ b/app/views/index.html
@@ -55,7 +55,7 @@
 
       {{ govukButton({
         text: "Research",
-        href: "./sign-in.html",
+        href: "./finance.html",
         isStartButton: true
       }) }}
 
